--- a/vercel.json
+++ b/vercel.json
@@ -1,10 +1,10 @@
 {
-  "version": 3,
+  "version": 2,
   "builds": [
     {
       "src": "package.json",
       "use": "@vercel/static-build",
-      "config": { "distDir": "dist" }
+      "config": { "distDir": "dist" }  // for Vite, use "build" for CRA
     }
   ],
   "routes": [
